Adding additional containers that are conditionally rendered.

--- a/src/block/editor.scss
+++ b/src/block/editor.scss
@@ -21,7 +21,16 @@
 		margin: 0 0 1.2rem 0;
 	}
 
-	.heading, .headingtwo {
+	.heading,
+	.headingtwo,
+	.headingthree,
+	.headingfour,
+	.headingfive,
+	.headingsix,
+	.headingseven,
+	.headingeight,
+	.headingnine,
+	.headingten {
 		font-size: 1.5rem;
 		font-weight: 600;
 	}
