--- a/src/common.scss
+++ b/src/common.scss
@@ -12,3 +12,7 @@ $gray: #dedede;
 $green: #bada55;
 $red: orangered;
 $off-white: #f1f1f1;
+$dark-white: #f5f5f5;
+$bright-white: #ffffff;
+$boss-orange: #F2830A;
+$boss-background: #E5E2D6;
