--- a/src/block/style.scss
+++ b/src/block/style.scss
@@ -22,6 +22,16 @@
 	.panel-default .panel-collapse .panel-body {
 		background-color: $dark-white;
 	}
+	.card.blockimg img {
+		margin: 0 auto;
+	}
+	.card__body {
+		font-size: 1.8rem;
+	}
+	.img_cap {
+		text-align: center;
+		margin-top: 10px;
+	}
 }
 
 /** Fontawesome
