Add all header, captions

--- a/src/block/editor.scss
+++ b/src/block/editor.scss
@@ -35,6 +35,38 @@
 		font-weight: 600;
 	}
 
+	.headingdivider,
+	.headingdivider2,
+	.headingdivider3,
+	.headingdivider4,
+	.headingdivider5,
+	.headingdivider6,
+	.headingdivider7,
+	.headingdivider8,
+	.headingdivider9,
+	.headingdivider10 {
+		font-size: 1.5rem;
+		font-weight: 600;
+		margin-bottom: 1.618em;
+	}
+
+	.img_cap,
+	.img_cap2,
+	.img_cap3,
+	.img_cap4,
+	.img_cap5,
+	.img_cap6,
+	.img_cap7,
+	.img_cap8,
+	.img_cap9,
+	.img_cap10 {
+		margin-top: 1.618em;
+	}
+
+	.card_body_text {
+		margin-top: 1.618em;
+	}
+
 	.image {
 		height: 15.7rem;
 		width: 100%;
