Added section titles 11 and 12

--- a/src/block/editor.scss
+++ b/src/block/editor.scss
@@ -30,7 +30,9 @@
 	.headingseven,
 	.headingeight,
 	.headingnine,
-	.headingten {
+	.headingten,
+	.headingeleven,
+	.headingtwelve {
 		font-size: 1.5rem;
 		font-weight: 600;
 	}
@@ -44,7 +46,9 @@
 	.headingdivider7,
 	.headingdivider8,
 	.headingdivider9,
-	.headingdivider10 {
+	.headingdivider10,
+	.headingdivider11,
+	.headingdivider12 {
 		font-size: 1.5rem;
 		font-weight: 600;
 		margin-bottom: 1.618em;
@@ -59,7 +63,9 @@
 	.img_cap7,
 	.img_cap8,
 	.img_cap9,
-	.img_cap10 {
+	.img_cap10,
+	.img_cap11,
+	.img_cap12 {
 		margin-top: 1.618em;
 	}
 
