Increased number of sections from 12 to 15. Corrected issue with rotating arrow on expand.

--- a/src/block/editor.scss
+++ b/src/block/editor.scss
@@ -32,7 +32,10 @@
 	.headingnine,
 	.headingten,
 	.headingeleven,
-	.headingtwelve {
+	.headingtwelve,
+	.headingthirteen,
+	.headingfourteen,
+	.headingfifteen {
 		font-size: 1.5rem;
 		font-weight: 600;
 	}
@@ -48,7 +51,10 @@
 	.headingdivider9,
 	.headingdivider10,
 	.headingdivider11,
-	.headingdivider12 {
+	.headingdivider12,
+	.headingdivider13,
+	.headingdivider14,
+	.headingdivider15 {
 		font-size: 1.5rem;
 		font-weight: 600;
 		margin-bottom: 1.618em;
@@ -65,7 +71,10 @@
 	.img_cap9,
 	.img_cap10,
 	.img_cap11,
-	.img_cap12 {
+	.img_cap12,
+	.img_cap13,
+	.img_cap14,
+	.img_cap15 {
 		margin-top: 1.618em;
 	}
 
